# advent-of-code-2025

./: .gitignore
aoc-python/: .gitignore  main.py  pyproject.toml
aoc-python/day00/: part1.py
aoc-python/day01/: part1.py  part2.py
aoc-python/day02/: part1.py  part2.py
aoc-python/day03/: part1.py  part2.py
aoc-python/day04/: part1.py  part2.py
aoc-python/day05/: part1.py  part2.py
aoc-python/day06/: part1.py  part2.py
aoc-python/day07/: part1.py  part2.py
aoc-python/day08/: part1.py  part2.py
aoc-python/day09/: part1.py  part2.py
aoc-python/day10/: part1.py  part2.py
aoc-python/day11/: part1.py  part2.py
aoc-python/day12/: part1.py
aoc-python/src/: support.py
aoc-python/support/: __init__.py  _support.py
